--- a/index.html
+++ b/index.html
@@ -6,6 +6,46 @@
     <title>Calculadora de Gorjeta</title>
 </head>
 <body>
-    <h1>Calculadora de Gorjeta</h1>
+    <header>
+        <img src="./images/logo.svg" alt="logo do splitter">
+    </header>
+    <main>
+        <section class="informacoes">
+            <form action="">
+               <div class="conta">
+                <label for="conta">Conta</label>
+                <div>
+                    <img src="./images/icon-dollar.svg" alt="icone do cifrao">
+                    <input type="number" name="conta" id="conta">
+                </div>
+               </div> 
+
+               <div class="gorjeta">
+                    <label for="outra">Selecione a gorjeta %</label>
+
+                    <div>
+                        <input type="button" value="5%">
+                        <input type="button" value="10%">
+                        <input type="button" value="15%">
+                        <input type="button" value="25%">
+                        <input type="button" value="50%">
+                        <input type="number" name="outra" id="outra">
+                    </div>
+               </div>
+
+               <div class="pessoas">
+                <label for="conta">Quantidade de Pessoas</label>
+                <p>Não pode ser zero</p>
+                <div>
+                    <img src="./images/icon-person.svg" alt="icone da pessoa">
+                    <input type="number" name="conta" id="conta">
+                </div>
+               </div>
+            </form>
+        </section>
+        <section>
+
+        </section>
+    </main>
 </body>
 </html>
