terceiro commit do HTML

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <label for="conta">Conta</label>
                 <div>
                     <img src="./images/icon-dollar.svg" alt="icone do cifrao">
-                    <input type="number" name="conta" id="conta">
+                    <input type="number" name="conta" id="conta" placeholder="0">
                 </div>
                </div> 
 
@@ -29,22 +29,39 @@
                         <input type="button" value="15%">
                         <input type="button" value="25%">
                         <input type="button" value="50%">
-                        <input type="number" name="outra" id="outra">
+                        <input type="number" name="outra" id="outra" placeholder="Outra">
                     </div>
                </div>
 
                <div class="pessoas">
-                <label for="conta">Quantidade de Pessoas</label>
+                <label for="pessoas">Quantidade de Pessoas</label>
                 <p>Não pode ser zero</p>
                 <div>
                     <img src="./images/icon-person.svg" alt="icone da pessoa">
-                    <input type="number" name="conta" id="conta">
+                    <input type="number" name="pessoas" id="pessoas" placeholder="0">
                 </div>
                </div>
             </form>
         </section>
-        <section>
 
+        <section class="resultados">
+            <div class="gorjeta-total">
+                <p>
+                    <strong>Gorjeta</strong> <br>
+                    / pessoa
+                </p>
+
+                <strong>$ 0.00</strong>
+            </div>
+
+            <div class="total">
+                <p>
+                    <strong>Total</strong> <br>
+                    / pessoa
+                </p>
+
+                <strong>$ 0.00</strong>
+            </div>
         </section>
     </main>
 </body>
