--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
                <div class="pessoas">
                 <label for="pessoas">Quantidade de Pessoas</label>
-                <p>Não pode ser zero</p>
+                <p id="erro">Não pode ser zero</p>
                 <div>
                     <img src="./images/icon-person.svg" alt="icone da pessoa">
                     <input type="number" name="pessoas" id="pessoas" placeholder="0">
