--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
 
                 <strong>$ 0.00</strong>
             </div>
+            
+            <button>Limpar</button>
         </section>
     </main>
 </body>
