--- a/index.html
+++ b/index.html
@@ -40,9 +40,11 @@
                </div>
 
                <div class="pessoas">
-                <label for="pessoas">Quantidade de Pessoas</label>
-                <p id="erro">Não pode ser zero</p>
-                <div>
+                <div class="textos">
+                    <label for="pessoas">Quantidade de Pessoas</label>
+                    <p id="erro">Não pode ser zero</p>
+                </div>
+                <div class="input-box">
                     <img src="./images/icon-person.svg" alt="icone da pessoa">
                     <input type="number" name="pessoas" id="pessoas" placeholder="0">
                 </div>
