sétimo commit do HTML e primeiro commit do JS

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     
     <link rel="stylesheet" href="style.css">
+    <script src="./script.js" defer></script>
     <title>Calculadora de Gorjeta</title>
 </head>
 <body>
